manifests/envoy-gateway/overlay/public/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-wildcard-stamx-nl
            kind: Secret
            group: ""
  addresses:
    - type: IPAddress
      value: 10.33.33.200
